Bug 493527 - "Default text editor" reverts to kate after switching it to Visual Studio Code or any other app not listed in the combobox
Summary: "Default text editor" reverts to kate after switching it to Visual Studio Cod...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_componentchooser (other bugs)
Version First Reported In: 6.1.5
Platform: Arch Linux Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-23 09:01 UTC by musicalstrength27
Modified: 2024-09-28 10:32 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description musicalstrength27 2024-09-23 09:01:00 UTC
Hi,
KDE has an issue with the text editor resetting. When I go to the default applications, change from Kate to Visual Studio Code, and confirm the changes, close the settings window and reopen it, it’s set back to Kate instead of Visual Studio Code. 

 OS: CachyOS
 Bootloader: GRUB (2:2.12-3.1)
 Shell: fish (3.7.1)
 Kernel: 6.11.0-5-cachyos
 Session: Wayland (1.23.1-1.1)
 Login Manager: SDDM (0.21.0-4.1)
 Window Manager: KWin (6.1.5-2)
 Desktop Environment: KDE (6.1.5)
 KDE Frameworks Version: (6.6.0-1.1)
 QT Version: 6.7.2
 Sound Server Name: PulseAudio (on PipeWire 1.2.4)
 Sound Server Version: PulseAudio (15.0.0)
 NVIDIA Driver Version: 560.35.03
 Performance Mode: Performance

Here’s a video where I open the settings from the terminal because I want it to be in English. Even when opening the settings normally, the issue still persists. This bug requires fixing:

https://www.youtube.com/watch?v=YDgu5VKxm2c
Comment 1 Nate Graham 2024-09-23 16:32:58 UTC
Can reproduce. The issue seems to happen when attempting to set it to anything not listed in the dropdown menu.
Comment 2 Akseli Lahtinen 2024-09-24 09:10:06 UTC
Im unable to reproduce this 

Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.90
KDE Frameworks Version: 6.7.0
Qt Version: 6.7.2
Kernel Version: 6.10.10-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 3600 6-Core Processor
Memory: 15,5 GiB of RAM
Graphics Processor: AMD Radeon RX 6600
Comment 3 Bug Janitor Service 2024-09-24 14:53:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-desktop/-/merge_requests/2544
Comment 4 Marco Martin 2024-09-25 14:05:22 UTC
Git commit 47316055ad3ffb37fda7a47c467100e886c51e97 by Marco Martin.
Committed on 25/09/2024 at 14:05.
Pushed by mart into branch 'master'.

kcms/componentchooser: More clear when an app can't handle a mime

When an application can't handle a mimetype, now show an inline message
saying that it can't instead of a tiny enigmatic i icon,
also, show it immediately after selecting, intead of waiting apply has
been pressed

![Screenshot_20240924_045336](/uploads/ee44c754b5dbc92ed125c2f08f9845d9/Screenshot_20240924_045336.png)

M  +1    -0    kcms/componentchooser/componentchooser.cpp
M  +136  -207  kcms/componentchooser/ui/main.qml

https://invent.kde.org/plasma/plasma-desktop/-/commit/47316055ad3ffb37fda7a47c467100e886c51e97