kcms/componentchooser: More clear when an app can't handle a mime

When an application can't handle a mimetype, now show an inline message
saying that it can't instead of a tiny enigmatic i icon,
also, show it immediately after selecting, intead of waiting apply has
been pressed

![Screenshot_20240924_045336](/uploads/ee44c754b5dbc92ed125c2f08f9845d9/Screenshot_20240924_045336.png)

BUG:493527